# AeroACARS

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: RELEASING.md
.github/workflows/: ci.yml  dev-build.yml  release.yml  xplane-plugin-ci.yml
client/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
client/src/: App.css  App.tsx  livemapCsp.test.ts  main.tsx  types.ts  vite-env.d.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/capabilities/: default.json
client/src-tauri/crates/aeroacars-mqtt/: Cargo.toml
client/src-tauri/crates/aeroacars-mqtt/src/: lib.rs  log_upload.rs  navdata.rs  provision.rs
client/src-tauri/crates/api-client/src/: lib.rs
client/src-tauri/crates/discord-presence/: Cargo.toml
client/src-tauri/crates/discord-presence/src/: format.rs  lib.rs
client/src-tauri/crates/discord-presence/tests/: format.rs
client/src-tauri/crates/landing-scoring/src/: lib.rs  sub_loadsheet.rs
client/src-tauri/crates/landing-scoring/tests/: goldenset.rs
client/src-tauri/crates/metar/src/: lib.rs
client/src-tauri/crates/recorder/src/: lib.rs
client/src-tauri/crates/secrets/: Cargo.toml
client/src-tauri/crates/secrets/src/: lib.rs
client/src-tauri/crates/sim-core/src/: lib.rs
client/src-tauri/crates/sim-msfs/: Cargo.toml  build.rs
client/src-tauri/crates/sim-msfs/src/: adapter.rs  lib.rs
client/src-tauri/crates/sim-msfs/src/adapter/: sys.rs  telemetry.rs
client/src-tauri/crates/sim-msfs/src/pmdg/: mod.rs  ng3.rs  x777.rs
client/src-tauri/crates/sim-xplane/: Cargo.toml
client/src-tauri/crates/sim-xplane/src/: adapter.rs  dataref.rs  lib.rs  premium.rs  profile.rs  rref.rs
client/src-tauri/crates/storage/src/: lib.rs
client/src-tauri/data/: ourairports-airports.csv
client/src-tauri/src/: accident.rs  aircraft_category.rs  aircraft_scan.rs  arrival.rs  discord.rs  discord_rpc.rs  lib.rs  phase_v2.rs  runway.rs  runway_assessment.rs  sentry_init.rs  touchdown_v2.rs  xplane_plugin_install.rs
client/src-tauri/src/remote/: auth.rs  bridge.rs  events.rs  mod.rs  net.rs  router.rs
client/src-tauri/tests/: phase_fsm_replay.rs  phase_v2_replay.rs  touchdown_v2_replay.rs
client/src-tauri/tests/fixtures/: gaf707-control-touchdown.json  gaf707-crash-touchdown.json
client/src/components/: AboutPanel.tsx  ActiveFlightPanel.phaseBadge.test.tsx  ActiveFlightPanel.tsx  ActivityLogPanel.tsx  AircraftScanPanel.tsx  ApproachStabilityCard.tsx  ApproachTdLine.test.tsx  BidsList.tsx  BriefingView.tsx  CockpitView.tsx  Dashboard.tsx  DiscordRpcPanel.tsx  DivertBanner.tsx  ErrorReportingFirstRunBanner.tsx  GForceForensik.tsx  IntegrityBanner.tsx  LandingPanel.rolloutExtra.test.ts  LandingPanel.tsx  LiveMapView.basemap.test.tsx  LiveMapView.follow.test.tsx  LiveMapView.tsx  LiveRecordingIndicator.tsx  LiveTapes.tsx  LoadsheetMonitor.tsx  LogbookView.test.tsx  LogbookView.tsx  LoginPage.tsx  ManualFileDialog.tsx  ManualFlightModal.tsx  NewsPanel.tsx  OrphanFlightsPanel.tsx  PhaseTimeline.tsx  PilotHeader.tsx  PmdgPremiumPanel.tsx  ReleaseNotesModal.tsx  RemotePinGate.tsx  RemoteServerPanel.tsx  ResumeFlightBanner.tsx  RouteMap.tsx  RunwayDiagramV2.tsx  (+17 more)
client/src/dev/: runwayDiagramV2Mapper.ts
client/src/hooks/: useDiscordRpcPush.ts  useIntegrityFlags.ts  useSimSession.ts  useUpdateChecker.ts
client/src/i18n/: index.ts
client/src/lib/: aircraftIcon.ts  ipc.test.ts  ipc.ts  landingScoring.golden.test.ts  landingScoring.ts  (+7 more)
docs/: GATE-INTEGRATION-TEST-PLAYBOOK.md  architecture.md  client-log-format.md  discord-v0.20.0.md  landing-detection.md  pmdg-sdk-integration.md  release-checklist.md  xplane-aircraft-dataref-overrides.md
docs/decisions/: 0001-tauri-rust-react-stack.md  0002-msfs-simconnect-only.md  0003-new-cloudeacars-phpvms-module.md  0004-xplane-bundled-xplm-plugin.md  0005-license-freeware-closed-source.md  0006-bilingual-de-en.md  README.md
docs/design/: q3-touchdown-sampler-extraction.md
docs/dev/: lvar-discovery-hubhop.md
docs/discord-assets/: README.md  generate.py
docs/integrity-module-scaffolding/: README.md  composer.json  module.json
docs/qs/: v0.7.15-qs-checklist.md  v0.7.16-fenix-beta-bugs.md
docs/release-notes/: v0.11.1.md  v0.12.1.md  v0.12.10.md  v0.12.12.md  v0.12.2.md  v0.12.3.md  v0.12.5.md  v0.12.6.md  v0.12.7.md  v0.12.9.md  v0.13.0.md  v0.13.10.md  v0.13.11.md  v0.13.12.md  v0.13.14.md  v0.13.15.md  v0.13.16.md  v0.13.17.md  v0.13.18.md  v0.13.5.md  v0.13.7.md  v0.13.8.md  v0.13.9.md  v0.14.0.md  v0.14.1.md  v0.15.0.md  v0.15.10.md  v0.15.11.md  v0.15.12.md  v0.15.13.md  v0.15.14.md  v0.15.15.md  v0.15.16.md  v0.15.17.md  v0.15.18.md  v0.15.19.md  v0.15.20.md  v0.15.21.md  v0.15.22.md  v0.15.23.md  (+70 more)
docs/spec/: aircraft-type-match.md  fenix-a32x-beta-qs-guide.md  fenix-a32x-cockpit-state-beta.md  flight-phase-state-machine.md  ofp-refresh-during-boarding.md  ofp-refresh-simbrief-direct-v0.7.8.md  requirements.md  runway-diagram-v2.contract.md  sim-disconnect-auto-resume.md  touchdown-forensics-v2.md  v0.12.1-phase-fsm-fix-and-va-hardening.md  v0.12.2-xplane-aircraft-dataref-profiles.md  v0.12.3-landing-g-foqa-measurement.md  v0.12.5-divert-and-manual-pirep.md  v0.13.0-mid-session-integrity-and-resume-policy.md  v0.16.9-xplane-body-velocity-takeoff-latch.md  v0.7.1-landing-ux-fairness.md  v0.7.18-orphan-flight-cleanup.md  v0.7.19-gaf707-crash-accident-detection.md  v0.7.6-landing-payload-consistency.md  v0.7.8-landing-rate-explainability.md  v0.9.0-conflict-audit.md  v0.9.0-delta-position-sampling.md  v0.9.0-discord-rich-presence.md  v0.9.0-flight-phases-expanded.md  v0.9.0-glitchtip-self-hosted.md  v0.9.0-per-bounce-detail.md  v0.9.0-roadmap.md  v0.9.0-telemetry-contract.md
reference/: README.md
reference/vmsacars-web-extracted/: README.md
scripts/: README.md  release-v0.7.15.sh
server-module/: README.md
shared/: README.md
xplane-plugin/: CMakeLists.txt  README.md
xplane-plugin/src/: plugin.cpp
(+64 files in other folders)
