[workspace]
members = [
    ".",
    "crates/api-client",
    "crates/sim-core",
    "crates/sim-msfs",
    "crates/sim-xplane",
    "crates/recorder",
    "crates/storage",
    "crates/secrets",
    "crates/geo",
    "crates/metar",
    "crates/aeroacars-mqtt",
]
resolver = "2"

[workspace.package]
version = "0.5.26"
edition = "2021"
license = "MIT"
authors = ["Thomas Kant <github@MANFahrer-GF>", "AeroACARS contributors"]
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# (De)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# HTTP client (rustls — no OpenSSL on Windows/macOS)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
url = "2"

# Discord Rich Presence — IPC zu lokalem Discord-Client (Named Pipe
# unter Windows, Unix-Socket auf macOS/Linux). v1.0 ist cross-platform,
# gleiche API auf allen Targets. Schlägt graceful fehl wenn Discord
# gerade nicht läuft — wir loggen warn und gehen weiter.
discord-rich-presence = "1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# OS keyring. Since keyring v3 the platform backends are opt-in features —
# without these flags the crate falls back to a no-op mock that silently
# accepts writes (the bug we hit on first try). `apple-native` and
# `windows-native` are gated internally by `#[cfg(target_os = ...)]` so
# only the appropriate one is compiled per target.
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cross-component schemas (codegen base)
schemars = "0.8"

# Internal crates (path entries)
api-client = { path = "crates/api-client" }
sim-core   = { path = "crates/sim-core" }
sim-msfs   = { path = "crates/sim-msfs" }
sim-xplane = { path = "crates/sim-xplane" }
recorder   = { path = "crates/recorder" }
storage    = { path = "crates/storage" }
secrets    = { path = "crates/secrets" }
geo        = { path = "crates/geo" }
metar      = { path = "crates/metar" }
aeroacars-mqtt = { path = "crates/aeroacars-mqtt" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
todo = "warn"
dbg_macro = "warn"

# ---- The Tauri application itself ----

[package]
name = "aeroacars-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AeroACARS desktop client (Tauri 2 + React)"

[lib]
# The `_lib` suffix avoids a Windows linker name clash between the bin and lib targets.
# See https://github.com/rust-lang/cargo/issues/8519
name = "aeroacars_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# OS-native notifications (system tray badges, banners). Used to
# alert pilots when AeroACARS is running in tray-only mode and a
# critical event happens (PIREP cancelled remotely, sim
# disconnected mid-flight). Cross-platform.
tauri-plugin-notification = "2"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
# HTTP client for the in-app GitHub-release-notes fetch. The
# api-client and metar crates already use reqwest via the workspace
# dep; we just need it directly here for `fetch_release_notes`.
reqwest.workspace = true

# Discord Rich Presence — siehe workspace-Dependency.
discord-rich-presence.workspace = true

# Bundled CSV parser for the embedded ourairports runway table
# (used by `src/runway.rs` to map a touchdown coord → runway).
csv = "1.3"

# In-process zip extraction for the X-Plane plugin auto-install
# flow — pulls `AeroACARS-XPlane-Plugin-vX.Y.Z.zip` from the matching
# GitHub release and unpacks it into `<X-Plane>/Resources/plugins/
# AeroACARS/`. Default features cover deflate, which is what GitHub
# Actions' `zip` action uses. No native deps.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Internal crates — wired up for use as the project grows
api-client.workspace = true
sim-core.workspace = true
recorder.workspace = true
storage.workspace = true
secrets.workspace = true
geo.workspace = true
metar.workspace = true
aeroacars-mqtt.workspace = true

# MSFS adapter is Windows-only
[target.'cfg(target_os = "windows")'.dependencies]
sim-msfs.workspace = true

# X-Plane adapter is cross-platform (UDP listener); included on all targets
[dependencies.sim-xplane]
workspace = true

[lints]
workspace = true
