[workspace]
members = [
    ".",
    "crates/api-client",
    "crates/sim-core",
    "crates/sim-msfs",
    "crates/sim-xplane",
    "crates/recorder",
    "crates/storage",
    "crates/secrets",
    "crates/geo",
    "crates/metar",
    "crates/aeroacars-mqtt",
    "crates/landing-scoring",
    # v0.9.0 (#Discord-RPC) — Pilot-Flugstatus im Discord-Profil
    "crates/discord-presence",
]
resolver = "2"

[workspace.package]
version = "0.13.14"
edition = "2021"
license = "MIT"
authors = ["Thomas Kant <github@MANFahrer-GF>", "AeroACARS contributors"]
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# (De)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# HTTP client (rustls — no OpenSSL on Windows/macOS)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
url = "2"

# Discord Rich Presence — IPC zu lokalem Discord-Client (Named Pipe
# v0.7.13: discord-rich-presence-Dep entfernt — Rich-Presence-Foundation
# blieb 8 Releases lang dead, RP-Wiring kam nie. Falls Revival: wieder
# `= "1"` hinzufuegen + Code aus git history rausziehen. Audit Q4-2026-05.

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# v0.7.13: keyring-Dep entfernt. v0.5.15 hat von OS-Keyring auf
# File-based Secrets-Storage (chmod 0600 JSON in <app_data_dir>) umgestellt.
# Die `migrate_from_keyring`-Funktion war seit 30+ Releases ungenutzt.
# Audit Q4-2026-05 (CC1) + Security-Audit M5.

# Time
chrono = { version = "0.4", features = ["serde"] }

# v0.7.13: schemars-Workspace-Dep entfernt — wurde von keinem direkten
# Code-Pfad mehr genutzt. Audit Q4-2026-05 (L9).

# Internal crates (path entries)
api-client = { path = "crates/api-client" }
sim-core   = { path = "crates/sim-core" }
sim-msfs   = { path = "crates/sim-msfs" }
sim-xplane = { path = "crates/sim-xplane" }
recorder   = { path = "crates/recorder" }
storage    = { path = "crates/storage" }
secrets    = { path = "crates/secrets" }
geo        = { path = "crates/geo" }
metar      = { path = "crates/metar" }
aeroacars-mqtt = { path = "crates/aeroacars-mqtt" }
landing-scoring = { path = "crates/landing-scoring" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
todo = "warn"
dbg_macro = "warn"

# ---- The Tauri application itself ----

[package]
name = "aeroacars-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AeroACARS desktop client (Tauri 2 + React)"

[lib]
# The `_lib` suffix avoids a Windows linker name clash between the bin and lib targets.
# See https://github.com/rust-lang/cargo/issues/8519
name = "aeroacars_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# OS-native notifications (system tray badges, banners). Used to
# alert pilots when AeroACARS is running in tray-only mode and a
# critical event happens (PIREP cancelled remotely, sim
# disconnected mid-flight). Cross-platform.
tauri-plugin-notification = "2"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
# HTTP client for the in-app GitHub-release-notes fetch. The
# api-client and metar crates already use reqwest via the workspace
# dep; we just need it directly here for `fetch_release_notes`.
reqwest.workspace = true

# v0.7.13: discord-rich-presence Workspace-Dep entfernt (Cleanup, RP-Code raus).

# Bundled CSV parser for the embedded ourairports runway table
# (used by `src/runway.rs` to map a touchdown coord → runway).
csv = "1.3"

# v0.5.44: Regex fuer extract_icao_code — extrahiert MSFS-ATC-MODEL-Strings
# wie "ATCCOM.AC_MODEL A321.0.text" zu "A321". regex ist eh schon als
# transitive Dep im Tree (via tracing-subscriber + anderen).
regex = "1"

# In-process zip extraction for the X-Plane plugin auto-install
# flow — pulls `AeroACARS-XPlane-Plugin-vX.Y.Z.zip` from the matching
# GitHub release and unpacks it into `<X-Plane>/Resources/plugins/
# AeroACARS/`. Default features cover deflate, which is what GitHub
# Actions' `zip` action uses. No native deps.
zip = { version = "2", default-features = false, features = ["deflate"] }

# v0.9.0 (#GlitchTip): Sentry-Rust SDK. Sendet anonymisierte Panics +
# capture_message-Calls an GlitchTip (Sentry-API-kompatibel). DSN
# kommt aus build-time-env AEROACARS_SENTRY_DSN (in CI/Build gesetzt,
# nicht ins Repo). Wenn leer = kein Init = No-Op.
# Wir nutzen rustls-tls (kein OpenSSL) konsistent mit reqwest.
sentry = { version = "0.42", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }

# Internal crates — wired up for use as the project grows
api-client.workspace = true
sim-core.workspace = true
recorder.workspace = true
storage.workspace = true
secrets.workspace = true
geo.workspace = true
metar.workspace = true
aeroacars-mqtt.workspace = true
landing-scoring.workspace = true
# v0.9.0 (#Discord-RPC): Pilot-Flugstatus im Discord-Profil
discord-presence = { path = "crates/discord-presence" }

# MSFS adapter is Windows-only
[target.'cfg(target_os = "windows")'.dependencies]
sim-msfs.workspace = true

# X-Plane adapter is cross-platform (UDP listener); included on all targets
[dependencies.sim-xplane]
workspace = true

[dev-dependencies]
# v0.7.0 — Replay-Acceptance-Tests gegen historische JSONL-Fixtures
# (Touchdown-Forensik v2). Fixtures sind .jsonl.gz, brauchen flate2.
flate2 = "1"

[lints]
workspace = true
