[package]
name = "secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File-based secrets storage for AeroACARS (phpVMS API key, MQTT creds)"

[dependencies]
# v0.5.15: keyring is kept ONLY for the one-shot migration of pre-
# existing credentials from the OS keyring (Apple Keychain / Windows
# Credential Manager) to our new JSON file. After v0.5.15 has run
# once on every pilot's machine we can drop this dep entirely.
keyring.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
