[package]
name = "sim-msfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MSFS 2020/2024 simulator adapter via SimConnect SDK (Windows only). Never FSUIPC."

# Windows-only crate: on non-Windows targets the lib has only a placeholder
# struct so the workspace still builds on macOS/Linux for ports of unrelated
# crates. The SimConnect dependency itself is gated to target_os = "windows".

[dependencies]
sim-core.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Community Rust bindings for the official MSFS SimConnect SDK.
# Requires the MSFS SDK installed locally; the crate's build pulls
# SimConnect.h / SimConnect.lib from the path advertised by the
# MSFS_SDK environment variable, which our build.rs sets up
# (see this crate's build.rs).
simconnect-sdk = { version = "0.2", features = ["derive"] }

[lints]
workspace = true
