[package]
name = "sim-xplane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "X-Plane 11/12 adapter — native UDP DataRef streaming (no plugin needed)"

[dependencies]
sim-core.workspace = true
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "sync", "time", "macros"] }
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
